--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Brave New World</h1>
-        <h2>Work Out and Feel Good!</h2.
+        <h2>Work Out and Feel Good!</h2>
     </body>
 </html>
