--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <h2>Work Out and Feel Good!</h2>
         <h3>Is this really how its done?</h3>
         <h2>Did Not!</h2>
+        <p>Here is a new feature</p>
     </body>
 </html>
